Fixed alignment of elements of addTodos component

--- a/src/components/todos/css/todos.css
+++ b/src/components/todos/css/todos.css
@@ -67,14 +67,12 @@ span.incompleted-percenteger {
 
 .status_changer {
     padding: 10px;
-    line-height: 100%;
     border: 2px solid transparent;
     border-radius: 10%;
 }
 .status_changer:hover {
     border-radius: 10px;
     padding: 10px;
-    line-height: 100%;
     border-bottom: 2px solid #ba0000;
     border-right: 2px solid #ba0000;
     border-top: 2px solid red;
